changed colors and fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Slider</title>
-    <link rel="stylesheet" href="./css/output.css">
+    <link rel="stylesheet" href="./css/css-dist/output.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
@@ -11,7 +11,12 @@
         <div class="container">
 
             <header class="header">
-                placeholder
+                <div class="header-left">
+                    
+                </div>
+                <div class="header-right">
+                    Skup drugih elemenata na stranici
+                </div>
             </header>
 
             <div class="outer-slider-container">
@@ -41,13 +46,13 @@
                     </div>
                 </div>  
                 <div class="text-container">
-                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque leo eros, bibendum et lectus sodales, laoreet blandit diam. Curabitur facilisis viverra luctus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas nec justo libero. Praesent ut m</p>
+                    <h2>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h2>
+                    <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
                 </div>
             </div>
 
             <footer class="footer">
-                placeholder
+                Skup drugih elemenata na stranici
             </footer>
 
         </div>
